--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,9 @@ header{
 .register-container button{
    width: 100%;
 }
+
+
+/* CSSS */
 .register-container{
    color: #fff;
    align-items: center;
